<?xml version="1.0" encoding="UTF-8"?>

<!--
  Copyright © 2021 Cask Data, Inc.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <name>Hive Plugins</name>
    <groupId>io.cdap.plugin</groupId>
    <artifactId>hive-connectors</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <description>Hive Source and Sink connectors</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <widgets.dir>widgets</widgets.dir>
        <docs.dir>docs</docs.dir>
        <cdap.version>6.4.0</cdap.version>
        <cdap.plugin.version>2.6.0-SNAPSHOT</cdap.plugin.version>
<!--        <hive.jdbc.version>3.1.2</hive.jdbc.version>-->
        <guava.version>30.1-jre</guava.version>
        <mockito.version>3.4.0</mockito.version>
        <hadoop.version>3.1.2</hadoop.version>
        <hive.version>2.3.8</hive.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-common</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-api-common</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>3.4.0</version>
            <scope>test</scope>
        </dependency>
      <dependency>
        <groupId>io.cdap.plugin</groupId>
        <artifactId>hydrator-common</artifactId>
        <version>2.7.0-SNAPSHOT</version>
      </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-api</artifactId>
            <version>${cdap.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>${hadoop.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-exec</artifactId>
            <version>${hive.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>log4j-1.2-api</artifactId>
                    <groupId>org.apache.logging.log4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>log4j-slf4j-impl</artifactId>
                    <groupId>org.apache.logging.log4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>log4j-web</artifactId>
                    <groupId>org.apache.logging.log4j</groupId>
                </exclusion>
            </exclusions>
            <!--      <scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>org.apache.hive.hcatalog</groupId>
            <artifactId>hive-hcatalog-core</artifactId>
            <version>${hive.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-service</artifactId>
            <version>${hive.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>hydrator-test</artifactId>
            <version>6.4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>checkstyle.xml</configLocation>
                            <suppressionsLocation>suppressions.xml</suppressionsLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>6.19</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <argLine>-Xmx2048m -Djava.awt.headless=true -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC
                        -XX:OnOutOfMemoryError="kill -9 %p" -XX:+HeapDumpOnOutOfMemoryError
                    </argLine>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <instructions>
                        <_exportcontents>
                            io.cdap.plugin.*;
                            com.google.common.base.*;
                            org.apache.hadoop.hive.metastore.*;
                            org.apache.commons.lang;org.apache.hive.hcatalog.*;
                        </_exportcontents>
                        <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
                        <Embed-Transitive>true</Embed-Transitive>
                        <Embed-Directory>lib</Embed-Directory>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.cdap</groupId>
                <artifactId>cdap-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <cdapArtifacts>
                        <parent>system:cdap-data-pipeline[6.1.2,7.0.0-SNAPSHOT)</parent>
                        <parent>system:cdap-data-streams[6.1.2,7.0.0-SNAPSHOT)</parent>
                    </cdapArtifacts>
                </configuration>
                <executions>
                    <execution>
                        <id>create-artifact-config</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>create-plugin-json</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
